--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ html_code_signature_canvas_final = """
       position: absolute;
       top: 260px;
       left: 50%;
+      transform: translateX(-50%);
       width: 500px;
       opacity: 0.5;
       z-index: 0;
@@ -233,4 +234,5 @@ with open(html_file_path_signature_canvas_final, "w", encoding="utf-8") as f:
     f.write(html_code_signature_canvas_final)
 
 html_file_path_signature_canvas_final
+
 
